[package]

name = "rust-kr-rust"
version = "0.0.1"
authors = ["klutzy <klutzytheklutzy@gmail.com>"]

[[bin]]

name = "rust-kr"
path = "src/main.rs"

[dependencies]

rustc-serialize = "*"
mime = "*"
hyper = { version = "*", default-features = false }
chrono = "*"
url = "*"
log = "*"
env_logger = "*"
mustache = "*"
getopts = "*"
pulldown-cmark = "*"
