[package]

name = "rust-kr-rust"
version = "0.0.1"
authors = ["klutzy <klutzytheklutzy@gmail.com>"]

[[bin]]

name = "rust-kr"
path = "src/main.rs"

[dependencies]
rustc-serialize = "0.3.19"
mime = "0.2.2"
hyper = { version = "0.9.10", default-features = false }
chrono = "0.2.25"
url = "1.2.0"
log = "0.3.6"
env_logger = "0.3.4"
mustache = "0.7.0"
getopts = "0.2.14"
pulldown-cmark = "0.0.8"
